--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "edge.js": "^6.2.1",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.3",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reflect-metadata": "^0.2.2"
