menambahkan dokumentasi swagger

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/node": "^22.15.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
@@ -71,7 +73,9 @@
     "node-telegram-bot-api": "^0.66.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "hotHook": {
     "boundaries": [
